Fixed alignment issues

--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
                     <label for="">Business'Bank</label>
                </div>
            </div>
-           <div class="input-group">
-                <input type="checkbox" name="bank-type" id="">
-                <label for="">Bewaar mijn gegevens</label>
-           </div>
+           <div class="form-group">
+               <div class="input-group">
+                    <input type="checkbox" name="bank-type" id="">
+                    <label for="">Bewaar mijn gegevens</label>
+                </div>
+            </div>
+            <hr>
            <div class="sub-heading">2. Identificatie</div>
            <p>U wilt u aanmelden met</p>
            <div class="selection">
