--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <div class="heading">Aanmelden in Home'Bank</div>
    <div class="card">
        <div class="sub-heading">1. Uw gegevens</div>
-       <form class="form" action="" method="POST" novalidate>
+       <form class="form" action="javascript:void(0);" novalidate>
            <label class="input-label">ing id</label>
            <input type="number">
            <label class="input-label">card id</label>
