--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
            <input type="number">
            <div class="form-group">
                <div class="input-group">
-                    <input type="radio" name="bank-type" id="" checked>
-                    <label for="">Home'Bank</label>
+                    <input type="radio" name="bank-type" id="home-bank" checked>
+                    <label for="home-bank">Home'Bank</label>
                </div>
                 <div class="input-group">
-                    <input type="radio" name="bank-type" id="">
-                    <label for="">Business'Bank</label>
+                    <input type="radio" name="bank-type" id="business-bank">
+                    <label for="business-bank">Business'Bank</label>
                </div>
            </div>
            <div class="form-group">
                <div class="input-group">
-                    <input type="checkbox" name="bank-type" id="">
-                    <label for="">Bewaar mijn gegevens</label>
+                    <input type="checkbox" name="bank-type" id="remember">
+                    <label for="remember">Bewaar mijn gegevens</label>
                 </div>
             </div>
             <hr>
