Added sidebar and js

--- a/index.html
+++ b/index.html
@@ -8,19 +8,34 @@
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
 
     <title>Document</title>
 </head>
 <body>
+ <div class="sidebar">
+    <ul class="nav-list">
+        <li class="nav-link"><a class="active" href="#">Startpagina</a></li>
+        <li class="nav-link"><a href="#">Producten</a></li>
+        <li class="nav-link"><a href="#">Sparen</a></li>
+        <li class="nav-link"><a href="#">Beleggen</a></li>
+        <li class="nav-link"><a href="#">Lenen</a></li>
+        <li class="nav-link"><a href="#">Verzekeren</a></li>
+        <li class="nav-link"><a href="#">Pnesioen</a></li>
+        <li class="nav-link"><a href="#">Diensten</a></li>
+    </ul>
+ </div>
+
 <div class="container">
    <div class="heading">Aanmelden in Home'Bank</div>
    <div class="card">
-       <div class="sub-heading">1. Uw gegevens</div>
        <form class="form" action="javascript:void(0);" novalidate>
+           <div class="sub-heading">1. Uw gegevens</div>
            <label class="input-label">ing id</label>
-           <input type="number">
+           <input type="number" id="ingInput">
            <label class="input-label">card id</label>
-           <input type="number">
+           <input type="number" id="cardInput">
            <div class="form-group">
                <div class="input-group">
                     <input type="radio" name="bank-type" id="home-bank" checked>
@@ -58,6 +73,8 @@
        </form>
    </div>
 </div>
+
+<script src="main.js"></script>
 <!-- bootstrap js -->
 <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>     -->
 </body>
