--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <div class="header">
-        Header
+        <img src="img/ing-logo.svg" alt="ING" id="logo"> 
     </div>
 
     <div class="content">
@@ -69,10 +69,10 @@
                             <img src="img/cardreader.png" alt="">
                             <span>uw ING-kaartlezer</span>
                         </div>
-                        <div class="btn btn-clear select">
+                        <!-- <div class="btn btn-clear select">
                             <img src="img/itsme.png" alt="">
                             <span>uw de itsme-app</span>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="btn-group">
                         <button class="btn">Aanmelden</button>
@@ -83,16 +83,31 @@
             </div>
         </div>
         <div class="sidebar">
-            <ul class="nav-list">
-                <li class="nav-link"><a class="active" href="#">Startpagina</a></li>
-                <li class="nav-link"><a href="#">Producten</a></li>
-                <li class="nav-link"><a href="#">Sparen</a></li>
-                <li class="nav-link"><a href="#">Beleggen</a></li>
-                <li class="nav-link"><a href="#">Lenen</a></li>
-                <li class="nav-link"><a href="#">Verzekeren</a></li>
-                <li class="nav-link"><a href="#">Pnesioen</a></li>
-                <li class="nav-link"><a href="#">Diensten</a></li>
-            </ul>
+            <div class="card">
+                <h3>Sie sind deutschsprachig?</h3>
+                <hr>
+                <a href="#">Anmeldeseite auf Deutsch</a>
+            </div>
+            <div class="card">
+                <h3>Hulp nodig?</h3>
+                <hr>
+                <p>Hebt u nog geen ING Card Reader of wilt u een nieuwe? <a href="#">Vraag hem nu aan!</a></p>
+                <p>Vind het antwoord in <a href="#">de veelgestelde vragen</a></p>
+                <p>Uw online veiligheid is onze prioriteit. <a href="#">Lees hoe ING uw bankgegevens beschermt.</a></p>
+                <p>Niet gevonden wat u zocht ? Bel onze helpdesk op <br> <b>+32 2 464 60 01.</b></p>
+            </div>
+            <div class="card">
+                <h3>Uw bank altijd binnen handbereik</h3>
+                <hr>
+                <p>Beheer uw bankzaken veilig op uw smartphone of tablet.</p>
+                <p><a href="#">Ontdek onze apps</a></p>
+            </div>
+            <div class="card">
+                <h3>Word ING-cliënt</h3>
+                <hr>
+                <p>U laat ons weten dat u cliënt wilt worden. Wij regelen alles met de andere bank.</p>
+                <p><a href="#">Ontdek hoe makkelijk u van bank verandert</a></p>
+            </div>
         </div>
     </div>
 
